2008-11-17  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_parse_features):
	use g_ascii_is_space() (thanks Wouter)

2008-11-17  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	document what the workarounds do

2008-11-17  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_prepare),
	(ftp_connection_use):
	If feat before login fails, try it again after login. (fixes bug
	#556786, researched by Oliver Joos) So we're now "better than gftp and
	filezilla together". Take that gnome-vfs!

2008-11-17  Andreas Henriksson <andreas@fatal.se>

	reviewed by: Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_parse_features):
	Deal with "\n" vs "\r\n" in FEAT responses. Researched by Oliver Joos.

2008-11-17  Andreas Henriksson <andreas@fatal.se>

	reviewed by: Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_parse_features):
	Be less strict in leading spaces of FEAT reply.
	Researched by Oliver Joos. Apparently common, one affected ftp server
	visible in bug #556809.

2008-11-17  Andreas Henriksson <andreas@fatal.se>

	reviewed by: Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_prepare),
	(ftp_connection_use), (g_vfs_backend_ftp_pop_connection),
	(do_mount):
	Do FEAT and OPTS UTF8 ON before login. This mirros behavior of lftp.

2008-11-17  Andreas Henriksson <andreas@fatal.se>

	reviewed by: Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	(ftp_connection_ensure_data_connection_epsv),
	(ftp_connection_ensure_data_connection_pasv):
	Add workarounds for EPSV/PASV data connection failures.
	- don't use EPSV if we get successful return codes but fails to
	connect.
	- don't use address in PASV response if we fail to connect to it
	 (use the same address as the command connection is established to).

2008-11-17  Andreas Henriksson <andreas@fatal.se>

	reviewed by: Benjamin Otte  <otte@gnome.org>
