@@ -1,3 +1,8 @@
+2008-11-18  Alexander Larsson  <alexl@redhat.com>
+
+        * daemon/gvfsbackendsftp.c:
+	If user is specified, add to name too, so we get a unique fuse path
+
 2008-11-17  Benjamin Otte  <otte@gnome.org>
 
 	* daemon/gvfsbackendftp.c: (ftp_connection_parse_features):
